# opcua-webhmi-bridge

./: Dockerfile  mypy.ini  pyproject.toml
.github/workflows/: ci-cd.yml
tests/integration/: docker-compose.yml  test_influxdb.py
