[tool.poetry]
name = "opcua-webhmi-bridge"
version = "0.1.0"
description = "Bridge between OPC-UA server and web-based HMI"
authors = ["Arnaud Rocher <arnaud.roche3@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
opcua-agent = "opcua_webhmi_bridge.main:app"

[tool.poetry.dependencies]
python = "~3.8"
asyncua = "0.9.12"
tenacity = "6.3.1"
pydantic = {extras = ["dotenv"], version = "1.8.1"}
typer = "0.3.2"
aiohttp = "3.7.4.post0"
yarl = "1.6.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
flake8-comprehensions = "^3.3.0"
pep8-naming = "^0.11.1"
flake8-bugbear = "^21.0.0"
flake8-unused-arguments = "^0.0.6"
mypy = "^0.790"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
flake8-docstrings = "^1.5.0"
flake8-bandit = "^2.1.2"
pytest-mock = "^3.3.1"
pytest-asyncio = "^0.14.0"
pytest-httpserver = "^1.0.0rc1"
pytest-aiohttp = "^0.3.0"
toml = "^0.10.2"
requests = "^2.25.1"
websocket_client = "^0.58.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
